--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "expo": "~53.0.17",
+    "expo-clipboard": "~7.1.5",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-root-toast": "^4.0.1",
     "react-native-safe-area-context": "^5.5.1",
     "styled-components": "^6.1.19"
   },
